--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Book Recommender System</title>
     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <style>
     .search-container {
         text-align: center; /* Center the search bar */
@@ -44,24 +46,31 @@
 <body>
 
     <nav class="navbar navbar-dark bg-dark" style="background-color: #e3f2fd;">
-        <a class="navbar-brand">My Book recommender</a>
         
+        {% if user.is_authenticated %}
+        <a class="navbar-brand">My Book recommender</a>
         <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
+            <li><a href="/book">Book</a></li>
             <li><a href="{% url "recommend" %}">Recommend</a></li>
-            <li><a>Contact</a></li>
-            {% if user.is_authenticated %}
+            <li><a href="{% url "contect" %}">Contact</a></li>
             <li><a href="{% url "logout" %}">Logout</a></li>
             <li><a href="#">Welcome | {{user.username}}</a></li>
-            {% else %}
+            {% if user.is_superuser %}
+            <li><a href="{% url "update" %}">Update</a></li>
+            <li><a href="{% url "bookChange" %}">Book Changes</a></li>
+            {% endif %}
+        </ul>
+
+        {% else %}
+        <ul class="nav navbar-nav">
+            <li><a href="/" class="navbar-brand">My Book recommender</a></li>
+            <li><a href="/book">Book</a></li>
+            <li><a href="{% url "contect" %}">Contact</a></li>
             <li><a href="{% url "login" %}">Login</a></li>
             <li><a href="{% url "singin" %}">Singup</a></li>
             {% endif %}
-
-            {% if user.is_superuser %}
-            <li><a href="{% url "update" %}">Update</a></li>
-            {% endif %}
         </ul>
+
     </nav>
 
 {% block contant %}
