--- a/app/templates/book_change.html
+++ b/app/templates/book_change.html
@@ -22,14 +22,15 @@
                 <div class="card">
                     <div class="card-body">
                         {% if user.is_authenticated %}
-                        <a href="recommend/{{book.id}}"><img class="card-img-top" src="{{book.pic_url}}" alt="pic not found"></a>
+                        <img class="card-img-top" src="{{book.pic_url}}" alt="pic not found">
                         {% else %}
                         <a href="/login"><img class="card-img-top" src="{{book.pic_url}}" alt="pic not found"></a>
                         {% endif %}
                         <p class="text-white">{{book.name}}</p>
                         <h4 class="text-white">{{book.author}}</h4>
                         <h4 class="text-white">Vot - {{book.votes}}</h4>
-                        <h4 class="text-white">Rating - {{book.rating}}</h4>
+                        <h4 class="text-white">Rating - {{book.rating |floatformat:1}}</h4>
+                        <a href="{{book.id}}" class="btn btn-danger btn-sm"><i class="fa fa-trash" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
