--- a/app/templates/recommend.html
+++ b/app/templates/recommend.html
@@ -22,6 +22,7 @@
                     <div class="card-body">
                         <a href="#"><img class="card-img-top" alt="Photo not available" src="{{i.2}}"></a>
                         <p class="text-white">{{i.0}}</p>
+                        <p class="text-white">{{i.3}}</p>
                         <h4 class="text-white">{{i.1}}</h4>
                     </div>
                 </div>
